검색창1차,추가창1차 디자인 완성
검색 창 폰트 적용 및 그림자(elevation)효과 추가(기존 그림자 효과는 시간이 나면 더 구현)

게시물 추가창 폰트(종류,크기,색상) 및 버튼 스타일(drawable/roundbutton_point_orange,navy)적용

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -32,6 +32,7 @@ tools:context=".AddFragment">
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:text="포트폴리오 상세 설명"
+                    android:fontFamily="@font/notosnas_black"
                     android:textColor="#000000"
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -41,7 +42,10 @@ tools:context=".AddFragment">
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginTop="20dp"
+                    android:background="@drawable/roundbutton_point_orage"
+                    android:fontFamily="@font/notosnas_black"
                     android:text="올리기"
+                    android:textColor="@color/white"
                     android:textSize="13sp" />
             </LinearLayout>
 
@@ -52,6 +56,7 @@ tools:context=".AddFragment">
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:text="선정한 폴더"
+                android:fontFamily="@font/notosans_bold"
                 android:textColor="#000000"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -62,6 +67,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="폴더명(추후 수정)"
+                android:textSize="16dp"
                 android:inputType="textNoSuggestions" />
 
             <TextView
@@ -71,6 +77,7 @@ tools:context=".AddFragment">
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:text="제목"
+                android:fontFamily="@font/notosans_bold"
                 android:textColor="#000000"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -81,6 +88,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="당신의 포트폴리오의 제목을 입력해주세요"
+                android:textSize="16dp"
                 android:inputType="textNoSuggestions" />
 
             <TextView
@@ -89,6 +97,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/notosans_bold"
                 android:text="해시태그"
                 android:textColor="#000000"
                 android:textSize="18dp"
@@ -100,6 +109,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:hint="(추후 추가)"
+                android:textSize="16dp"
                 android:inputType="textNoSuggestions" />
 
             <Button
@@ -108,7 +118,10 @@ tools:context=".AddFragment">
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/roundbutton_navy"
                 android:text="이미지 선택"
+                android:textColor="@color/white"
+                android:fontFamily="@font/notosnas_black"
                 android:textSize="13sp" />
 
             <HorizontalScrollView
@@ -172,6 +185,7 @@ tools:context=".AddFragment">
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:text="설명"
+                android:fontFamily="@font/notosans_bold"
                 android:textColor="#000000"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -182,6 +196,7 @@ tools:context=".AddFragment">
                 android:layout_height="300dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="top"
+                android:textSize="16dp"
                 android:hint="당신의 포트폴리오에 대해 이야기 해주세요.\n디자인도 다시 수정"
                 android:inputType="textNoSuggestions" />
         </LinearLayout>
