--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Potfollio" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Potfollio" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/grey2</item>
         <!-- 상태바 색상 -->
