--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -111,7 +111,8 @@
                 android:id="@+id/card_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp" />
+                android:layout_marginStart="20dp"
+                android:text="Game Director"/>
 
             <TextView
                 android:id="@+id/card_info"
