--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SearchActivity"
-    android:id="@+id/myfrag">
+    tools:context=".SearchActivity">
 
     <TextView
         android:id="@+id/textView"
