폰트 수정 및 여러페이지 수정
검색 페이지, 마이페이지 전체 디자인 2차 수정
한글 폰트 5종 추가

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -31,7 +31,7 @@ tools:context=".AddFragment">
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
-                    android:fontFamily="@font/notosnas_black"
+                    android:fontFamily="@font/notosans_kr_black"
                     android:text="포트폴리오 상세 설명"
                     android:textColor="#000000"
                     android:textSize="18dp"
@@ -42,8 +42,8 @@ tools:context=".AddFragment">
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/roundbutton_point_orage"
-                    android:fontFamily="@font/notosnas_black"
+                    android:background="@drawable/roundbutton_point_orange"
+                    android:fontFamily="@font/notosans_black"
                     android:text="올리기"
                     android:textColor="@color/white"
                     android:textSize="13sp" />
@@ -55,7 +55,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/notosans_bold"
+                android:fontFamily="@font/notosans_kr_bold"
                 android:text="선정한 폴더"
                 android:textColor="#000000"
                 android:textSize="18dp"
@@ -65,7 +65,7 @@ tools:context=".AddFragment">
                 android:id="@+id/edtlogId2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:hint="폴더명(추후 수정)"
                 android:inputType="textNoSuggestions"
                 android:textSize="16dp" />
@@ -76,7 +76,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/notosans_bold"
+                android:fontFamily="@font/notosans_kr_bold"
                 android:text="제목"
                 android:textColor="#000000"
                 android:textSize="18dp"
@@ -97,7 +97,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/notosans_bold"
+                android:fontFamily="@font/notosans_kr_bold"
                 android:text="해시태그"
                 android:textColor="#000000"
                 android:textSize="18dp"
@@ -119,7 +119,7 @@ tools:context=".AddFragment">
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/roundbutton_navy"
-                android:fontFamily="@font/notosnas_black"
+                android:fontFamily="@font/notosans_black"
                 android:text="이미지 선택"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
@@ -189,7 +189,7 @@ tools:context=".AddFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/notosans_bold"
+                android:fontFamily="@font/notosans_kr_bold"
                 android:text="설명"
                 android:textColor="#000000"
                 android:textSize="18dp"
