--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:text="회원가입"
             android:textSize="15dp"
-            android:fontFamily="@font/notosnas_black"
+            android:fontFamily="@font/notosans_black"
             android:textColor="@color/point_orange"
             style="?android:borderlessButtonStyle"
             />
