--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="311dp"
         android:layout_marginBottom="605dp"
@@ -20,6 +20,7 @@
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:fontFamily="@font/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,33 +53,12 @@
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:fontFamily="@font/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="400dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="459dp"
-        android:background="#BCD3D1D1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/btn_card_change"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:text="명함 수정"
-            android:textSize="10sp" />
-    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/card_frame"
@@ -95,6 +75,7 @@
         <LinearLayout
             android:layout_width="400dp"
             android:layout_height="200dp"
+            android:background="@drawable/round_mypage"
             android:orientation="vertical">
 
             <TextView
@@ -105,30 +86,33 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/notosans_black"/>
 
             <TextView
                 android:id="@+id/card_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Game Director"/>
+                android:text="Game Director"
+                android:fontFamily="@font/notosans_medium"
+                android:background="@drawable/underline_search"/>
 
             <TextView
                 android:id="@+id/card_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="안녕하세요.\n저의 Pot, Folio에 방문해주셔서 감사합니다." />
+                android:text="안녕하세요.\n저의 Pot, Folio에 방문해주셔서 감사합니다."
+                android:fontFamily="@font/notosans_kr_regular"/>
 
             <TextView
                 android:id="@+id/card_sns"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:text="pp734.k"
-                android:textAlignment="textEnd" />
+                android:textAlignment="textEnd"/>
 
             <TextView
                 android:id="@+id/card_phone"
@@ -151,6 +135,33 @@
 
         </LinearLayout>
 
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="459dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btn_card_change"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="명함 수정"
+            android:textSize="10sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/notosans_bold"
+            android:elevation="30dp"
+            android:background="@drawable/roundbutton_point_orange"/>
     </FrameLayout>
 
     <ImageButton
