--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,34 +24,34 @@
             android:id="@+id/back_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#6DB7F3">
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/hello"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Hello"
-                android:textColor="?android:attr/textColorPrimaryInverse"
+                android:textColor="@color/grey"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:fontFamily="@string/app_name"
+                android:fontFamily="@font/app_name"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/potfolio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:fontFamily="@string/app_name"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/app_name"
                 android:text="Pot,Folio"
-                android:textColor="?android:attr/textColorPrimaryInverse"
-                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -63,15 +63,15 @@
                 android:id="@+id/welcom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
+                android:fontFamily="@font/notosans_kr_regular"
                 android:lineSpacingExtra="6dp"
                 android:text="Pot,Folio에 오신 여러분들 환영합니다.
                 \nPot,Foilo에서는 제한없이 자신을 표현할 수 있습니다.
                 \n지금부터 여러분을 Pot,Folio에 담아보세요."
-                android:fontFamily="@font/notosans_regular"
-                android:textColor="?android:attr/textColorPrimaryInverse"
-                android:textSize="10dp"
+                android:textColor="@color/black"
+                android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -83,12 +83,12 @@
                 android:id="@+id/HotFolio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@string/app_name"
+                android:fontFamily="@font/app_name"
                 android:text="Hot Folio"
-                android:textColor="?android:attr/textColorPrimaryInverse"
-                android:textSize="35sp"
+                android:textColor="@color/black"
+                android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -98,18 +98,17 @@
 
             <Button
                 android:id="@+id/btnhot"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="#00FFFFFF"
-                android:text="more"
-                android:textSize="8sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                style="?android:borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/notosans_medium"
+                android:text=".. more  >"
+                android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/HotFolio"
-                app:layout_constraintTop_toBottomOf="@+id/welcom"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/welcom" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
