--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -63,7 +63,7 @@
     <FrameLayout
         android:id="@+id/card_frame"
         android:layout_width="400dp"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:layout_marginTop="200dp"
         android:layout_marginBottom="459dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +74,7 @@
 
         <LinearLayout
             android:layout_width="400dp"
-            android:layout_height="200dp"
+            android:layout_height="220dp"
             android:background="@drawable/round_mypage"
             android:orientation="vertical">
 
@@ -104,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="안녕하세요.\n저의 Pot, Folio에 방문해주셔서 감사합니다."
+                android:textSize="12dp"
                 android:fontFamily="@font/notosans_kr_regular"/>
 
             <TextView
@@ -131,7 +132,26 @@
                 android:inputType="textEmailAddress"
                 android:text="lkeyun3301@gmial.com"
                 android:textAlignment="textEnd" />
-
+            <LinearLayout
+                android:layout_width="400dp"
+                android:layout_height="20dp"
+                android:background="@drawable/round_mypage"
+                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/card_app_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="Pot,Folio"
+                android:textColor="@color/black"
+                android:fontFamily="@font/app_name"/>
+                <ImageView
+                    android:layout_width="300dp"
+                    android:layout_height="10dp"
+                    android:layout_marginStart="7dp"
+                    android:background="@drawable/underline_card"
+                    />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -151,10 +171,10 @@
 
         <Button
             android:id="@+id/btn_card_change"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_width="75dp"
+            android:layout_height="25dp"
             android:layout_gravity="right"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:text="명함 수정"
             android:textSize="10sp"
@@ -164,17 +184,21 @@
             android:background="@drawable/roundbutton_point_orange"/>
     </FrameLayout>
 
-    <ImageButton
+
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/profile_camera"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="#3F51B5"
-        android:src="@drawable/ic_baseline_camera_alt_24"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:civ_border_overlay="true"
+        app:civ_border_width="5dp"
+        app:civ_border_color="#000000"
+        android:src="@drawable/profile"/>
+
 
     <ImageButton
         android:id="@+id/imageButton4"
