--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -121,6 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:text="010.6345.6284"
+                android:inputType="phone"
                 android:textAlignment="textEnd" />
 
             <TextView
