--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -87,7 +87,8 @@
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:fontFamily="@font/notosans_black"/>
+                android:fontFamily="@font/notosans_black"
+                android:background="@drawable/underline_search"/>
 
             <TextView
                 android:id="@+id/card_nickname"
@@ -95,8 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="Game Director"
-                android:fontFamily="@font/notosans_medium"
-                android:background="@drawable/underline_search"/>
+                android:fontFamily="@font/notosans_medium"/>
 
             <TextView
                 android:id="@+id/card_info"
@@ -192,9 +192,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:civ_border_overlay="true"
-        app:civ_border_width="5dp"
-        app:civ_border_color="#000000"
+        app:riv_corner_radius="100dp"
+        app:riv_border_overlay="true"
+        app:riv_border_width="5dp"
+        app:riv_border_color="@color/white"
+        android:elevation="10dp"
         android:src="@drawable/profile"/>
 
 
@@ -211,6 +213,26 @@
         app:layout_constraintEnd_toStartOf="@+id/imageButton5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+<!--        android:layout_margin="20dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        card_view:cardCornerRadius="20dp"-->
+<!--        card_view:cardUseCompatPadding="true">-->
+<!--        <com.makeramen.roundedimageview.RoundedImageView-->
+<!--            android:id="@+id/imageview_main_image1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            app:riv_corner_radius="20dp"-->
+<!--            android:src="@drawable/profile"-->
+<!--            app:riv_border_color="#333333"-->
+<!--            app:riv_mutate_background="true"-->
+<!--            app:riv_oval="false" />-->
+<!--    </androidx.cardview.widget.CardView>-->
 
     <ImageButton
         android:id="@+id/imageButton5"
