--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="311dp"
         android:layout_marginBottom="605dp"
@@ -135,14 +135,14 @@
                 android:layout_height="20dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/card_app_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="Pot,Folio"
-                android:textColor="@color/black"
-                android:fontFamily="@font/app_name"/>
+                <TextView
+                    android:id="@+id/card_app_logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="Pot,Folio"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/app_name"/>
                 <ImageView
                     android:layout_width="300dp"
                     android:layout_height="10dp"
@@ -193,7 +193,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius="100dp"
-        app:riv_border_overlay="true"
+        app:civ_border_overlay="true"
         app:riv_border_width="5dp"
         app:riv_border_color="@color/white"
         android:elevation="10dp"
@@ -214,25 +214,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-<!--        android:layout_margin="20dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="200dp"-->
-<!--        card_view:cardCornerRadius="20dp"-->
-<!--        card_view:cardUseCompatPadding="true">-->
-<!--        <com.makeramen.roundedimageview.RoundedImageView-->
-<!--            android:id="@+id/imageview_main_image1"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:scaleType="centerCrop"-->
-<!--            app:riv_corner_radius="20dp"-->
-<!--            android:src="@drawable/profile"-->
-<!--            app:riv_border_color="#333333"-->
-<!--            app:riv_mutate_background="true"-->
-<!--            app:riv_oval="false" />-->
-<!--    </androidx.cardview.widget.CardView>-->
+    <!--    <androidx.cardview.widget.CardView-->
+    <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+    <!--        android:layout_margin="20dp"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="200dp"-->
+    <!--        card_view:cardCornerRadius="20dp"-->
+    <!--        card_view:cardUseCompatPadding="true">-->
+    <!--        <com.makeramen.roundedimageview.RoundedImageView-->
+    <!--            android:id="@+id/imageview_main_image1"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:scaleType="centerCrop"-->
+    <!--            app:riv_corner_radius="20dp"-->
+    <!--            android:src="@drawable/profile"-->
+    <!--            app:riv_border_color="#333333"-->
+    <!--            app:riv_mutate_background="true"-->
+    <!--            app:riv_oval="false" />-->
+    <!--    </androidx.cardview.widget.CardView>-->
 
     <ImageButton
         android:id="@+id/imageButton5"
