--- a/app/src/main/res/layout/activity_card_change.xml
+++ b/app/src/main/res/layout/activity_card_change.xml
@@ -113,7 +113,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="20dp"
-                android:text="별명"
+                android:text="직업"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -249,37 +249,6 @@
                 android:layout_marginStart="27dp"
                 android:layout_marginEnd="20dp"
                 android:hint="당신의 이메일을 공유해보세요"
-                android:background="@null"
-                android:textSize="15sp" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_gravity="bottom|end"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="20dp"
-                android:text="링크"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/change_link"
-                android:layout_width="289dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="50sp"
-                android:hint="당신의 링크를 공유해보세요."
                 android:background="@null"
                 android:textSize="15sp" />
 
