하단네비게이션 바 아이콘 추가
선택시 바뀌는 아이콘도 추가했으나,  MainActivity를 설정하다가 실수가 생길 수 있어서, 중단하고 commit함

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -87,7 +87,7 @@ tools:context=".AddFragment">
                 android:layout_marginLeft="20dp"
                 android:paddingLeft="10dp"
                 android:hint="당신의 포트폴리오의 제목을 입력해주세요"
-                android:background="@drawable/roundbutton_white"
+                android:background="@drawable/roundbutton_grey1"
                 android:inputType="textNoSuggestions"
                 android:textSize="16dp" />
 
@@ -168,7 +168,7 @@ tools:context=".AddFragment">
                 android:hint="당신의 포트폴리오에 대해 이야기 해주세요.\n디자인도 다시 수정"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
-                android:background="@drawable/round_white"
+                android:background="@drawable/round_grey1"
                 android:inputType="textNoSuggestions"
                 android:textSize="16dp" />
         </LinearLayout>
