--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/grey1"
+    android:background="@color/grey2"
     tools:context=".SearchActivity">
 
     <TextView
@@ -197,7 +197,7 @@
         app:riv_border_width="5dp"
         app:riv_border_color="@color/white"
         android:elevation="10dp"
-        android:src="@drawable/profile"/>
+        android:src="@drawable/profile1"/>
 
 
     <ImageButton
