하단바 아이콘 변경기능 수정
+) 추후 하단바 글자 삭제 혹은 글자 색상 함께 변경 계획

삭제 : app:labelVisibilityMode="unlabeled"

색변경: drawable파일 생성

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,25 +3,25 @@
 
     <item android:id="@+id/tab_main"
         android:enabled="true"
-        android:icon="@drawable/home"
+        android:icon="@drawable/selector_home"
         android:title="메인"
         />
 
 
     <item android:id="@+id/tab_search"
         android:enabled="true"
-        android:icon="@drawable/search"
+        android:icon="@drawable/selector_search"
         android:title="검색"/>
 
     <item android:id="@+id/tab_add"
         android:enabled="true"
-        android:icon="@drawable/add"
+        android:icon="@drawable/selector_add"
         android:title="추가"/>
 
 
     <item android:id="@+id/tab_my"
         android:enabled="true"
-        android:icon="@drawable/mypage"
+        android:icon="@drawable/selector_mypage"
         android:title="마이페이지"/>
 
 </menu>
