--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="navy">#4E5464</color>
     <color name="grey1">#F8F8F8</color>
     <color name="grey2">#E5E5E5</color>
+    <color name="frame_color">#9B4C4C4C</color>
 </resources>
